# qwen_vl_lora-1

./: .env  .gitignore  README.md  pyproject.toml  qwen_vl_lora.ipynb  requirements.txt
aml/: requirements-notebook.txt  workshop_qwen_vl_aml.ipynb
dataset/: train.jsonl
qwen_vl_lora/env/: conda.yaml
qwen_vl_lora/src/: train_lora.py
