[project]
name = "finetune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"azure-ai-ml>=1.15.0",
	"azure-identity>=1.16.0",
	"accelerate>=0.28.0",
	"bitsandbytes>=0.43.0; platform_system != \"Darwin\"",
	"datasets>=2.18.0",
	"ipykernel>=6.29.0",
	"pip>=24.0",
	"peft>=0.11.0",
	"pillow>=10.2.0",
	"sentencepiece>=0.2.0",
	"timm>=0.9.12",
	"torch>=2.3.0",
	"torchvision>=0.18.0",
	"transformers>=4.39.0",
	"trl>=0.8.6",
	"wandb>=0.16.0",
	"ipywidgets>=8.1.7",
]

[tool.uv]
managed = true
